PART1 Fix clieck range tests and descriptions (+12 squashed commits) Squashed commits: [8ebec5d] remove import of Focusable.scss [927288b] Add dayCircle class namespace [d8a1d5b] Fixing the Calendar for the PR [c7737b7] CSS fix in Calendar [7d7c033] Added tests and some fixes to Calendar [b382d2d] Calendar now supports selection of date ranges, including styling and tests [55dbf21] fix e2e [476c3d8] . [92e4efa] Trying to write tests for the Calendar [c315948] Add calendar test page and e2e test accordingly [e5f01aa] Calendar: working on tests and selection [777c7b6] Calendar: added selectedDays and onChangeSelectedDays prop (value and onChange are deprecated); added styling for a selected date range

--- a/src/Calendar/Calendar.scss
+++ b/src/Calendar/Calendar.scss
@@ -1,4 +1,5 @@
 @import '../common.scss';
+@import '../Typography/text.scss';
 
 $rootPadding: 24px;
 $rootBackgroundColor: $D80;
@@ -19,10 +20,7 @@ $hoverBoxShadow: 0 0 0 $boxShadowWidth $F00;
 
 .calendar :global .DayPicker {
   width: $calendarWidth;
-  @include FontLight;
-  font-size: 14px;
-  line-height: 1.29;
-  color: $D40;
+  @include Text($size: small, $weight: thin);
   background-color: $D80;
 
   abbr {
@@ -66,10 +64,28 @@ $hoverBoxShadow: 0 0 0 $boxShadowWidth $F00;
     cursor: pointer;
     color: $D10;
     z-index: 1;
+    position: relative;
 
     &:focus {
       outline: none;
-      box-shadow: $hoverBoxShadow;
+      z-index: 10;
+
+      &:after {
+        position: absolute;
+        top: 0px;
+        bottom: 0px;
+        left: 0px;
+        right: 0px;
+        border-radius: 50%;
+        @include FocusBox;
+        content: " ";
+        display: block;
+        z-index: 11;
+      }
+
+      :local(.dayCircle) {
+        box-shadow: $hoverBoxShadow;
+      }
     }
 
     &.DayPicker-Day--unfocused,
@@ -93,16 +109,74 @@ $hoverBoxShadow: 0 0 0 $boxShadowWidth $F00;
 
     &--selected {
       background-color: $B10;
-      color: $D80;
-      &:hover {
-        background-color: $B20;
-      }
+      @include Text($size: small, $weight: thin, $light: true);
     }
 
-    &--outside,
     &--disabled {
       pointer-events: none;
       color: $D55;
+    }
+
+    &.DayPicker-Day--selected:not(.DayPicker-Day--start):not(.DayPicker-Day--end):not(.DayPicker-Day--outside):not(.DayPicker-Day--singleDay) {
+      background-color: $B50;
+      border-radius: 0;
+      box-shadow: none;
+      color: $D10;
+    }
+    &.DayPicker-Day--selected:not(.DayPicker-Day--outside):last-of-type,
+    &.DayPicker-Day--lastOfMonth:not(.DayPicker-Day--outside) {
+      border-top-right-radius: 50% !important;
+      border-bottom-right-radius: 50% !important;
+    }
+    &.DayPicker-Day--selected:not(.DayPicker-Day--outside):first-of-type,
+    &.DayPicker-Day--firstOfMonth:not(.DayPicker-Day--outside) {
+      border-top-left-radius: 50% !important;
+      border-bottom-left-radius: 50% !important;
+    }
+
+    &.DayPicker-Day--singleDay:not(.DayPicker-Day--outside),
+    &.DayPicker-Day--start.DayPicker-Day--end:not(.DayPicker-Day--outside) {
+      background: none !important;
+      border-radius: 50%;
+    }
+  
+    &.DayPicker-Day--selected.DayPicker-Day--start:not(.DayPicker-Day--outside),
+    &.DayPicker-Day--selected.DayPicker-Day--end:not(.DayPicker-Day--outside),
+    &.DayPicker-Day--singleDay:not(.DayPicker-Day--start):not(.DayPicker-Day--end):not(.DayPicker-Day--outside) {
+      :local(.dayCircle) {
+        background-color: $B10;
+      }
+
+      &:hover {
+        :local(.dayCircle) {
+          background-color: $B20;
+        }
+      }
+    }
+
+    :local(.dayCircle) {
+      border-radius: 50%;
+      width: 100%;
+      height: 100%;
+      text-align: center;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+    }
+
+    &.DayPicker-Day--selected.DayPicker-Day--start:not(.DayPicker-Day--outside) {
+      background: linear-gradient(to left, $B50 0%,$B50 50%,#000000 50%,transparent 50%,transparent 100%);
+      border-radius: 0;
+    }
+    
+    &.DayPicker-Day--selected.DayPicker-Day--end:not(.DayPicker-Day--outside) {
+      background: linear-gradient(to right, $B50 0%,$B50 50%,#000000 50%,transparent 50%,transparent 100%);
+      border-radius: 0;
+    }
+    
+    &--outside {
+      pointer-events: none;
+      visibility: hidden;
     }
   }
 
